Fixed window bug
Windows were taking up too much space because they had no width limit. This is now fixed.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     opacity: 0.5;
     transition: opacity 0.25s;
     line-height: 1.5;
+    max-width: 25%;
 }
 
 .drag-window:hover {
